# pipetex2tex

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  OUTLOOK.md  README.md  README.rst  pytest.ini  setup.cfg  setup.py
cookbook/: example.py  test.tex
paper/: paper.bib  paper.md
pipetex2tex/: __init__.py  cli.py  convert.py  metadata.py  sqrt.py  tools.py
pipetex2tex/tests/: sqrt_tests.py
